# QPrompt-Teleprompter

./: .clang-format  .env.android  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  COPYING.ASSETS  COPYING.LESSER  COPYING.txt  DESCRIPTION.txt  ExtractMessages.sh  QPrompt.kdev4  QPrompt.pro  QPrompt.proj  QThePrompter.kdev4  README.md  README.txt  abstractunits.hpp  bengali.html  build-android.sh  build.md  build.sh  com.cuperino.qprompt.appdata.xml  com.cuperino.qprompt.desktop  com.cuperino.qtheprompter.appdata.xml  com.cuperino.qtheprompter.desktop  documenthandler.cpp  hot_reload_config.json  kirigami-power-tweaks.patch  main.cpp  markersmodel.h  org.kde.qtheprompter.appdata.xml  org.kde.qtheprompter.desktop  qprompt-mobile.pro  qtquickcontrols2.conf  requirements.txt  setup.bat  setup.sh  systemfontchooserdialog.cpp  telemetry.cpp  (+2 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  translation-error.md
.github/workflows/: cla.yml
.kdev4/: QPrompt.kdev4  QThePrompter.kdev4
android/: AndroidManifest.xml  build.gradle  gradle.properties  gradlew.bat  version.gradle.in
android/res/drawable/: splash.xml
android/res/drawable-v24/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/res/values/: libs.xml  strings.xml  styles.xml
build_wasm/: .qmake.stash
cmake/: BreezeIconSubset.cmake  FindSphinx.cmake  HunspellDictionaries.cmake  HunspellShim.cmake
docs/: CMakeLists.txt  conf.py  index.md  requirements.txt
docs/manpage/: qprompt.1
icons/hicolor/: scalable-com.cuperino.qprompt.icns
locale/: CMakeLists.txt  de.po  es.gmo  es.po  extractmessages.sh  it.po  ko.po  pl.po  pt.po  ru.po
po/: CMakeLists.txt  GettextToQtInternationalization.js  ar.po  cs.po  de.po  es.po  extractmessages.sh  fi.po  fr.po  he.po  it.po  ja.po  ko.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  pt_PT.po  qprompt.pot  qprompt_ar.ts  qprompt_cs.ts  qprompt_de.ts  qprompt_en.ts  qprompt_es.ts  qprompt_fi.ts  qprompt_fr.ts  qprompt_he.ts  qprompt_it.ts  qprompt_ja.ts  qprompt_ko.ts  qprompt_nl.ts  qprompt_oc.ts  qprompt_pl.ts  qprompt_pt_BR.ts  qprompt_pt_PT.ts  qprompt_ru.ts  qprompt_tr.ts  qprompt_uk.ts  qprompt_zh.ts  (+7 more)
src/: CMakeLists.txt  QPrompt.pro  QPrompt.proj  abstractinputsource.cpp  abstractinputsource.h  abstractunits.hpp  appcontroller.cpp  appcontroller.h  ar.po  assets.qrc  com.cuperino.qprompt.appdata.xml  com.cuperino.qprompt.desktop  de.po  documenthandler.cpp  documenthandler.h  el.po  es.po  example.md  extractmessages.sh  fi.po  fr.po  globalhotkeys.cpp  globalhotkeys.h  guide.html  he.po  hi.po  instructions.html  iossavedialog.cpp  iossavedialog.h  iossavedialog.mm  it.po  ja.po  ko.po  main.cpp  marker.hpp  markersmodel.cpp  markersmodel.h  pl.po  prompterwindow.h  pt.po  (+27 more)
src/contents/ui/: AboutPage.qml  Countdown.qml  EditorToolbar.qml  ProgressIndicator.qml  ProjectionWindow.qml  Prompter.qml  PrompterBackground.qml  PrompterPage.qml  PrompterView.qml  ReadRegionOverlay.qml  ScrollBar.qml.unused  TimerClock.qml  main.qml
src/documents/: guide_en.html  untitled.html  welcome_cs.html  welcome_de.html  welcome_en.html  welcome_es.html  welcome_fr.html  welcome_it.html  welcome_ja.html  welcome_nl.html  welcome_pt.html  welcome_pt_BR.html  welcome_pt_PT.html  welcome_zh.html
src/fonts/: LICENSE.txt  chinese.qrc  config.json  fonts.qrc
src/fonts/editor/Palanquin/: OFL.txt  README.md
src/fonts/editor/ScheherazadeNew/: FONTLOG.txt  OFL.txt  README.txt
src/fonts/editor/ScheherazadeNew/documentation/: DOCUMENTATION.txt  ScheherazadeNew-features.odt  ScheherazadeNew-typesample.odt
src/fonts/editor/ScheherazadeNew/web/: ScheherazadeNew-webfont-example.css  ScheherazadeNew-webfont-example.html
src/fonts/editor/opendyslexic/: OFL-FAQ.txt  OFL.txt  README.md
src/fonts/icons/: LICENSE.txt  config.json  demo.html
src/fonts/icons/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
src/fonts/icons/font/: fontello.eot
src/icons/: icons.qrc
src/images/: DMGBackground.xcf  DMGBackground2.xcf  hands.xcf  header.xcf  welcome.xcf
src/ios/: Info.plist.in  QPrompt.entitlements
src/kirigami_ui/: AboutPage.qml  EditorToolbar.qml  InputsOverlay.qml  KeyInputButton.qml  LanguageSettingsOverlay.qml  LayoutDirectionSettingsOverlay.qml  Main.qml  MarkersDrawer.qml  OnlineResourceButtons.qml  PathsPage.qml  ProjectionWindow.qml  PrompterPage.qml  RecentDocuments.qml  RemotePage.qml  TelemetryPage.qml  WheelSettingsOverlay.qml  main.qml
src/kirigami_ui/+android/: Main.qml  main.qml
src/kirigami_ui/+windows/: Main.qml  main.qml
src/prompter/: Countdown.qml  CursorAutoHide.qml  Find.qml  Flip.qml  PointerSettings.qml  ProgressIndicator.qml  ProjectionsManager.qml  Prompter.qml  PrompterBackground.qml  PrompterView.qml  PrompterWindow.qml  PrompterWindowContents.qml  ReadRegionOverlay.qml  Remote.qml  TimerClock.qml  documenthandler.cpp  documenthandler.h  inputmanager.cpp  inputmanager.h  marker.hpp  markersmodel.cpp  markersmodel.h  prompterwindow.cpp  prompterwindow.h  promptsession.cpp  promptsession.h  qpromptwindow.cpp  qpromptwindow.h  telemetry.cpp  telemetry.h
src/prompter/pointers/: pointer_0.qml  pointer_1.qml  pointer_2.qml  pointers.qrc
src/prompter/timer/: promptertimer.cpp  promptertimer.h
src/qt/: WindowDragger.qml  abstractunits.hpp  qmlutil.hpp
src/shaders/: blur.frag  blur.frag.qsb  shaders.qrc  shadow.frag  shadow.frag.qsb  squircle_rhi.frag  squircle_rhi.vert  tint.frag
src/shaders/+hlsl/: blur.frag  shadow.frag
src/shaders/+qsb/: blur.frag  shadow.frag
src/shaders/rhi/: blur.frag  shadow.frag
src/timer/: promptertimer.cpp
test_data/: doc_test.doc  doc_test_Word_2003.doc  docx_test.docx  docx_test_Word_365.docx  docx_test_Word_365_Mac.docx  odt_test.odt  ordered_unordered_lists_test.html  qprompt_abw_test.abw
